Fix/product instance (#36)
* productinstance-v1

* productinstance-v1-ok

* productinstance-v1-final

* 1
