# abacusflow-core/abacusflow-transaction/src/main/kotlin/org/bruwave/abacusflow/transaction/TransactionProductType.kt
@@ -1,0 +1,6 @@
+package org.bruwave.abacusflow.transaction
+
+enum class TransactionProductType {
+    MATERIAL, // 普通商品，按数量采购
+    ASSET     // 一物一码，按实例采购
+}
