# abacusflow-portal/abacusflow-portal-web/src/main/kotlin/org/bruwave/abacusflow/portal/web/product/ProductController.kt
@@ -5,8 +5,9 @@ import org.bruwave.abacusflow.portal.web.model.BasicProductVO
 import org.bruwave.abacusflow.portal.web.model.CreateProductInputVO
 import org.bruwave.abacusflow.portal.web.model.ProductVO
 import org.bruwave.abacusflow.portal.web.model.UpdateProductInputVO
+import org.bruwave.abacusflow.portal.web.product.mapper.toVO
 import org.bruwave.abacusflow.usecase.product.CreateProductInputTO
-import org.bruwave.abacusflow.usecase.product.ProductService
+import org.bruwave.abacusflow.usecase.product.service.ProductService
 import org.bruwave.abacusflow.usecase.product.UpdateProductInputTO
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
@@ -40,6 +41,8 @@ class ProductController(
                     supplierId = createProductInputVO.supplierId,
                     unit = createProductInputVO.unit.name,
                     unitPrice = createProductInputVO.unitPrice,
+                    note = createProductInputVO.note,
+                    type = createProductInputVO.type.name,
                     specification = createProductInputVO.specification,
                 ),
             )
@@ -52,18 +55,19 @@ class ProductController(
         id: Long,
         updateProductInputVO: UpdateProductInputVO,
     ): ResponseEntity<ProductVO> {
-        val product =
-            productService.updateProduct(
-                id,
-                UpdateProductInputTO(
-                    name = updateProductInputVO.name,
-                    categoryId = updateProductInputVO.categoryId,
-                    supplierId = updateProductInputVO.supplierId,
-                    unit = updateProductInputVO.unit?.name,
-                    unitPrice = updateProductInputVO.unitPrice,
-                    specification = updateProductInputVO.specification,
-                ),
-            )
+        val product = productService.updateProduct(
+            id,
+            UpdateProductInputTO(
+                name = updateProductInputVO.name,
+                categoryId = updateProductInputVO.categoryId,
+                supplierId = updateProductInputVO.supplierId,
+                unit = updateProductInputVO.unit?.name,
+                unitPrice = updateProductInputVO.unitPrice,
+                note = updateProductInputVO.note,
+                type = updateProductInputVO.type?.name,
+                specification = updateProductInputVO.specification,
+            ),
+        )
         return ResponseEntity.ok(
             product.toVO(),
         )
